--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="style.css">
+
 <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
 
   <title>Intro section with dropdown navigation</title>
 
@@ -24,7 +25,8 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">snap</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+<svg width="32" height="18" xmlns="http://www.w3.org/2000/svg"><g fill="#151515" fill-rule="evenodd"><path d="M0 0h32v2H0zM0 8h32v2H0zM0 16h32v2H0z"/></g></svg>
+        
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -73,21 +75,31 @@
     </div>
   </nav>
 
+  <!-- <main>
+    <div class="container ">
+      <div class="row">
+        <div class="col">
+          <h1>Make remote work</h1>
+          <p>Get your team in sync, no matter your location. Streamline processes, 
+            create team rituals, and watch productivity soar.</p>
+            <button class="btn bg-dark text-white">Learn more</button>
+        </div>
+        <div class="col">
+          <img src="/images/image-hero-desktop.png" alt="" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </main> -->
+  
 
 
 
-  <!-- Features
-  Company
-  Careers
-  About
 
-  Login
-  Register
+  <!-- 
 
   Make remote work
 
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
+  
 
   Learn more -->
   
