added  main content of the page

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     </div>
   </nav>
 
-  <!-- <main>
+  <main>
     <div class="container ">
       <div class="row">
         <div class="col">
-          <h1>Make remote work</h1>
+          <h1>Make <br> remote work</h1>
           <p>Get your team in sync, no matter your location. Streamline processes, 
             create team rituals, and watch productivity soar.</p>
             <button class="btn bg-dark text-white">Learn more</button>
@@ -89,7 +89,7 @@
         </div>
       </div>
     </div>
-  </main> -->
+  </main>
   
 
 
