added the hero image and centered the body text

--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 
   <main>
     <div class="container ">
-      <div class="row">
-        <div class="col">
+      <div class="row px-5">
+        <div class="col-7 hero my-auto">
           <h1>Make <br> remote work</h1>
           <p>Get your team in sync, no matter your location. Streamline processes, 
             create team rituals, and watch productivity soar.</p>
             <button class="btn bg-dark text-white">Learn more</button>
         </div>
-        <div class="col">
-          <img src="/images/image-hero-desktop.png" alt="" class="img-fluid">
+        <div class="col-5 ">
+          <img src="/images/image-hero-desktop.png" alt="" class="img-fluid ">
         </div>
       </div>
     </div>
