added the logo of the clients

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <nav class="navbar navbar-expand-lg px-4 py-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">snap</a>
+      <a class="navbar-brand" href="#" style="font-size:25px ;">snap</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <svg width="32" height="18" xmlns="http://www.w3.org/2000/svg"><g fill="#151515" fill-rule="evenodd"><path d="M0 0h32v2H0zM0 8h32v2H0zM0 16h32v2H0z"/></g></svg>
         
@@ -83,6 +83,13 @@
           <p>Get your team in sync, no matter your location. Streamline processes, 
             create team rituals, and watch productivity soar.</p>
             <button class="btn bg-dark text-white">Learn more</button>
+            <div class="clients">
+
+              <img src="/images/client-databiz.svg" alt="">
+              <img src="/images/client-audiophile.svg" alt="">
+              <img src="/images/client-meet.svg" alt="">
+              <img src="/images/client-maker.svg" alt="">
+            </div>
         </div>
         <div class="col-5 ">
           <img src="/images/image-hero-desktop.png" alt="" class="img-fluid ">
@@ -105,7 +112,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Rubby Jane Doclara</a>.
   </div>
 
 
