--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; margin-top: 40px; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -85,7 +85,7 @@
             <button class="btn bg-dark text-white">Learn more</button>
             <div class="clients">
 
-              <img src="/images/client-databiz.svg" alt="">
+              <img src="images/client-databiz.svg" alt="">
               <img src="/images/client-audiophile.svg" alt="">
               <img src="/images/client-meet.svg" alt="">
               <img src="/images/client-maker.svg" alt="">
