--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="style.css">
@@ -37,10 +37,10 @@
               Features
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#"><img src="/images/icon-todo.svg" alt=""> Todo List</a></li>
-              <li><a class="dropdown-item" href="#"><img src="/images/icon-calendar.svg" alt=""> Calendar</a></li>
-              <li><a class="dropdown-item" href="#"><img src="/images/icon-reminders.svg" alt=""> Reminders</a></li>
-              <li><a class="dropdown-item" href="#"><img src="/images/icon-planning.svg" alt=""> Planning</a></li>
+              <li><a class="dropdown-item" href="#"><img src="images/icon-todo.svg" alt=""> Todo List</a></li>
+              <li><a class="dropdown-item" href="#"><img src="images/icon-calendar.svg" alt=""> Calendar</a></li>
+              <li><a class="dropdown-item" href="#"><img src="images/icon-reminders.svg" alt=""> Reminders</a></li>
+              <li><a class="dropdown-item" href="#"><img src="images/icon-planning.svg" alt=""> Planning</a></li>
 
 
             </ul>
@@ -88,13 +88,13 @@
             <div class="clients">
 
               <img src="images/client-databiz.svg" alt="">
-              <img src="/images/client-audiophile.svg" alt="">
-              <img src="/images/client-meet.svg" alt="">
-              <img src="/images/client-maker.svg" alt="">
+              <img src="images/client-audiophile.svg" alt="">
+              <img src="images/client-meet.svg" alt="">
+              <img src="images/client-maker.svg" alt="">
             </div>
         </div>
         <div class="col-lg-5 col-12">
-          <img src="/images/image-hero-desktop.png" alt="" class="img-fluid ">
+          <img src="images/image-hero-desktop.png" alt="" class="img-fluid ">
         </div>
       </div>
     </div>
