added hover  effects to the navbar

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
               Features
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Todo List</a></li>
-              <li><a class="dropdown-item" href="#">Calendar</a></li>
-              <li><a class="dropdown-item" href="#">Reminders</a></li>
-              <li><a class="dropdown-item" href="#">Planning</a></li>
+              <li><a class="dropdown-item" href="#"><img src="/images/icon-todo.svg" alt=""> Todo List</a></li>
+              <li><a class="dropdown-item" href="#"><img src="/images/icon-calendar.svg" alt=""> Calendar</a></li>
+              <li><a class="dropdown-item" href="#"><img src="/images/icon-reminders.svg" alt=""> Reminders</a></li>
+              <li><a class="dropdown-item" href="#"><img src="/images/icon-planning.svg" alt=""> Planning</a></li>
 
 
             </ul>
