--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
   <main>
     <div class="container ">
-      <div class="row px-5">
+      <div class="row justify-content-md-center px-5 d-flex-sm flex-column-reverse flex-lg-row ">
         <div class="col-7 hero my-auto">
           <h1>Make <br> remote work</h1>
           <p>Get your team in sync, no matter your location. Streamline processes, 
             create team rituals, and watch productivity soar.</p>
-            <button class="btn bg-dark text-white">Learn more</button>
+            <button class="btn d-flex flex-sm justify-content-center">Learn more</button>
             <div class="clients">
 
               <img src="/images/client-databiz.svg" alt="">
@@ -91,7 +91,7 @@
               <img src="/images/client-maker.svg" alt="">
             </div>
         </div>
-        <div class="col-5 ">
+        <div class="col-lg-5">
           <img src="/images/image-hero-desktop.png" alt="" class="img-fluid ">
         </div>
       </div>
