d-flex on hero text section

--- a/index.html
+++ b/index.html
@@ -78,11 +78,13 @@
   <main>
     <div class="container ">
       <div class="row justify-content-md-center px-5 d-flex-sm flex-column-reverse flex-lg-row ">
-        <div class="col-7 hero my-auto">
+        <div class="col-lg-7 col-12 hero my-auto d-flex flex-column justify-content-md-center md-text-center">
           <h1>Make <br> remote work</h1>
           <p>Get your team in sync, no matter your location. Streamline processes, 
             create team rituals, and watch productivity soar.</p>
-            <button class="btn d-flex flex-sm justify-content-center">Learn more</button>
+          
+            <button class="btn learn">Learn more</button>
+          
             <div class="clients">
 
               <img src="/images/client-databiz.svg" alt="">
@@ -91,7 +93,7 @@
               <img src="/images/client-maker.svg" alt="">
             </div>
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-12">
           <img src="/images/image-hero-desktop.png" alt="" class="img-fluid ">
         </div>
       </div>
